Fixing the scrollbar fix 🤡

--- a/src/app.css
+++ b/src/app.css
@@ -104,4 +104,4 @@ footer {
 	color: var(--secondary-color);
 }
 
-html { margin-left: calc(100vw - 100%); }
+html { overflow-y: scroll; }
